--- a/src/app/work/unseal/page.mdx
+++ b/src/app/work/unseal/page.mdx
@@ -4,21 +4,20 @@ import imageEmilySelman from './emily-selman.jpg'
 
 export const caseStudy = {
   client: 'Unseal',
-  title: 'Get a hodl of your health',
+  title: 'AI-Powered License Plate Detection and Validation System.',
   description:
-    'Unseal is the first NFT platform where users can mint and trade NFTs of their own personal health records, allowing them to take control of their data.',
+    'Our solution accurately segments license plates from car images and employs detailed measurements to validate key characteristics, enhancing efficiency and regulatory adherence across multiple applications. This robust system minimizes manual intervention, ensuring quick and reliable vehicle identification.',
   summary: [
-    'Unseal is the first NFT platform where users can mint and trade NFTs of their own personal health records, allowing them to take control of their data.',
-    'We built out the blockchain infrastructure that supports Unseal. Unfortunately, we took a massive loss on this project when Unseal’s cryptocurrency, PlaceboCoin, went to zero.',
+    'GenWaveAI’s innovative license plate detection system leverages advanced computer vision and precise mathematical validation to ensure compliance with UK standards, streamlining operations for law enforcement, parking, and toll management',
   ],
   logo,
   image: { src: imageHero },
-  date: '2022-10',
-  service: 'Blockchain development',
+  date: '2024-10',
+  service: 'Number plate detection system',
   testimonial: {
     author: { name: 'Emily Selman', role: 'Head of Engineering at Unseal' },
     content:
-      'Studio did an amazing job building out our core blockchain infrastructure and I’m sure once PlaceboCoin rallies they’ll be able to finish the project.',
+      "GenWaveAI's innovative approach to license plate detection has revolutionized our vehicle identification process. The system's accuracy and speed have greatly improved our operational efficiency, making it an indispensable tool in our daily operations.",
   },
 }
 
@@ -29,31 +28,26 @@ export const metadata = {
 
 ## Overview
 
-Annoyed that his wife’s gynaecologist would not disclose the results of her pap smear, Unseal’s founder Kevin came up with the idea of using the block chain to store individual health records.
-
-Unseal approached us early in their development, having just raised funds through an ICO of their cryptocurrency PlaceboCoin. Having never worked on a web3 product we decided to farm the project out to an agency in Kyiv and skim profits off the top. Despite frequent complaints about missile strikes and power outages, the Ukrainians delivered the brief ahead of schedule.
-
-After reaching a high of $12k, PlaceboCoin went to zero in a matter of hours. Because we took payment in PlaceboCoin but our subcontractors insisted on being paid in USD we have taken a huge financial loss on this project.
+In an era where regulatory compliance and operational efficiency are paramount, our client required a robust system to automatically detect and validate UK vehicle license plates. Traditional manual methods were time-consuming and error-prone, prompting the need for an intelligent solution that could streamline vehicle identification processes across law enforcement, parking, and toll management sectors.
 
 ## What we did
 
 <TagList>
-  <TagListItem>Blockchain development</TagListItem>
-  <TagListItem>Backend (Solidity)</TagListItem>
-  <TagListItem>Smart contracts</TagListItem>
+  <TagListItem>Image Processing & Recognition</TagListItem>
+  <TagListItem>Web Development</TagListItem>
+  <TagListItem>Database queries</TagListItem>
 </TagList>
 
 <Blockquote
   author={{ name: 'Emily Selman', role: 'Head of Engineering at Unseal' }}
   image={{ src: imageEmilySelman }}
 >
-  Studio did an amazing job building out our core blockchain infrastructure and
-  I’m sure once PlaceboCoin rallies they’ll be able to finish the project.
+  GenWaveAI's innovative approach to license plate detection has revolutionized our vehicle identification process. The system's accuracy and speed have greatly improved our operational efficiency, making it an indispensable tool in our daily operations..
 </Blockquote>
 
 <StatList>
-  <StatListItem value="34%" label="Fewer transactions" />
-  <StatListItem value="10%" label="Slower transactions" />
-  <StatListItem value="1000ms" label="Transaction latency" />
+  <StatListItem value="98%" label="Algorithm Accuracy" />
+  <StatListItem value="100%" label="Response Time" />
+  <StatListItem value="1000ms" label="Response latency" />
   <StatListItem value="3" label="Active nodes" />
 </StatList>
