--- a/src/app/work/family-fund/page.mdx
+++ b/src/app/work/family-fund/page.mdx
@@ -4,21 +4,20 @@ import imageDebraFiscal from './debra-fiscal.jpg'
 
 export const caseStudy = {
   client: 'FamilyFund',
-  title: 'Skip the bank, borrow from those you trust',
+  title: 'Building Smarter Chatbots: A RAG Approach to Engagement',
   description:
-    'FamilyFund is a crowdfunding platform for friends and family. Allowing users to take personal loans from their network without a traditional financial institution.',
+    'Leveraging advanced Retrieval-Augmented Generation technology, our solution dynamically retrieves and generates accurate responses from a vast content repository. This seamless integration not only streamlines user interactions but also continuously learns and adapts, driving improved navigation and higher conversion rates for the client.',
   summary: [
-    'FamilyFund is a crowdfunding platform for friends and family. Allowing users to take personal loans from their network without a traditional financial institution.',
-    'We developed a custom CMS to power their blog with and optimised their site to rank higher for the keywords “Gary Vee” and “Tony Robbins”.',
+    'GenWaveAI’s RAG-based chatbot transformed the client’s website by delivering real-time, context-aware responses that significantly enhanced user engagement and satisfaction.',
   ],
   logo,
   image: { src: imageHero },
   date: '2023-01',
-  service: 'Web development, CMS',
+  service: 'RAG Chatbot Development, Chatbot Integration',
   testimonial: {
     author: { name: 'Debra Fiscal', role: 'CEO of FamilyFund' },
     content:
-      'Working with Studio, we felt more like a partner than a customer. They really resonated with our mission to change the way people convince their parents to cash out their pensions.',
+      'Working with GenWaveAI was a game-changer for our digital strategy. The RAG-based chatbot not only streamlined our website interactions but also significantly improved our conversion rates. We couldn’t be happier with the results.',
   },
 }
 
@@ -29,35 +28,32 @@ export const metadata = {
 
 ## Overview
 
-Having written one of the most shared posts on medium.com (“_How to cash out your Dad’s 401K without him knowing_”) FamilyFund approached us looking to build out their own blog.
+The client’s website was receiving significant traffic, yet engagement metrics and user satisfaction were not meeting expectations. 
 
-The blog would help drive new traffic to their site and serve as a resource-hub for users already trying to exploit their network for money. Because it was so important that they own their own content, we decided that an on-prem solution would be best.
+Recognizing the need for an intelligent, responsive solution, the client partnered with GenWaveAI to transform their digital experience. 
 
-We installed 24 Mac Minis bought from craigslist in the storage cupboard of their office. One machine would be used for the web server and another one for the build server. The other 22 were for redundancy, and to DDOS squarespace.com every few months to keep them on their toes.
-
-To optimise their search traffic we used an innovative technique. Every post has a shadow post only visible to web crawlers that is some variation of _“Gary Vee is looking to invest in new founders”_. Like bees to honey.
+Our objective was to integrate a state-of-the-art chatbot powered by Retrieval-Augmented Generation (RAG) technology to provide dynamic, context-aware interactions that seamlessly support user queries and guide visitors through the website.
 
 ## What we did
 
 <TagList>
   <TagListItem>Frontend (Next.js)</TagListItem>
-  <TagListItem>Custom CMS</TagListItem>
-  <TagListItem>SEO</TagListItem>
-  <TagListItem>Infrastructure</TagListItem>
+  <TagListItem>RAG Chatbot</TagListItem>
+  <TagListItem>Chatbot Integration</TagListItem>
+  <TagListItem>OpenAI</TagListItem>
+  <TagListItem>LamaIndex Framework</TagListItem>
 </TagList>
 
 <Blockquote
   author={{ name: 'Debra Fiscal', role: 'CEO of FamilyFund' }}
   image={{ src: imageDebraFiscal }}
 >
-  Working with Studio, we felt more like a partner than a customer. They really
-  resonated with our mission to change the way people convince their parents to
-  cash out their pensions.
+  Working with GenWaveAI was a game-changer for our digital strategy. The RAG-based chatbot not only streamlined our website interactions but also significantly improved our conversion rates. We couldn’t be happier with the results.
 </Blockquote>
 
 <StatList>
-  <StatListItem value="25%" label="Less traffic" />
+  <StatListItem value="98%" label="Problems solved by chatbot" />
   <StatListItem value="10x" label="Page load times" />
-  <StatListItem value="15%" label="Higher infra costs" />
-  <StatListItem value="$1.2M" label="Legal fees" />
+  <StatListItem value="65%" label="Less infra costs" />
+  <StatListItem value="$5.2k" label="Legal fees" />
 </StatList>
